--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </h1>
                 
                 <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-xl leading-relaxed">
-                    Защитные металлические кожухи для монтажа кабеля на стены и опоры. Обеспечение защиты согласно требованиям нормативной документации и СП 76.13330.2016.
+                    Защитные металлические кожухи для монтажа кабеля на вертикальные основания и опоры. Обеспечение защиты согласно требованиям нормативной документации и СП 76.13330.2016.
                 </p>
 
                 <div class="flex flex-col sm:flex-row gap-4">
