--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img src="logo-180.png" class="w-10 h-10 object-contain" alt="Логотип">
                     
                     <div class="flex flex-col">
-                        <span class="font-black text-xl tracking-tight text-gray-900 leading-none uppercase">ЗАЩИТА КАБЕЛЯ</span>
+                        <span class="font-black text-xl max-[390px]:text-sm tracking-tight text-gray-900 leading-none uppercase">ЗАЩИТА КАБЕЛЯ</span>
                         <span class="text-[10px] font-bold text-gray-500 uppercase tracking-wider">Брянск</span>
                     </div>
                 </div>
