--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Производство металлических защитных кожухов для кабеля. Доставка в Москву и по всей России. Защита кабеля на опорах и фасадах (СП 76.13330.2016). Прямые поставки с завода в Брянске.">
     <meta name="keywords" content="Защита кабеля, защитный кожух для кабеля, кожух для монтажа кабеля, кабель в трубе, защита электрического кабеля, защита кабеля от механических повреждений, прокладка кабеля по стене, прокладка кабеля по опоре, защита кабеля Москва, купить защитный кожух с доставкой, металлический кожух для кабеля, защита кабеля оптом, кожух D57, кожух D76, кожух D89, СП 76.13330.2016, 123-ФЗ">
-    <meta name="yandex-verification" content="b12588d4c3da28dc" />
     
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -75,17 +74,19 @@
         }
     </style>
 
-    <!-- Yandex.Metrika -->
+        <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function(m,e,t,r,i,k,a){
             m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
             m[i].l=1*new Date();
             for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
             k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
-        })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=105857267', 'ym');
-        ym(105857267, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+        })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=106114833', 'ym');
+
+        ym(106114833, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/105857267" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript><div><img src="https://mc.yandex.ru/watch/106114833" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
 </head>
 <body class="bg-white text-gray-900 font-sans antialiased selection:bg-brand-primary selection:text-white">
 
