--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="bg-brand-primary w-12 h-12 rounded-lg flex items-center justify-center mb-4 text-brand-dark">
                         <i data-lucide="maximize" class="h-6 w-6"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-900 mb-2">Правильный изгиб</h3>
+                    <h3 class="text-xl font-bold text-gray-900 mb-2">Калиброванный изгиб</h3>
                     <p class="text-gray-600">
                         Монтаж кабеля с соответствующим данному классу напряжения радиусом изгиба согласно п.6.4.1.7 СП 76.13330.2016.
                     </p>
@@ -220,7 +220,7 @@
             <!-- Outro Text -->
             <div class="max-w-4xl mx-auto bg-brand-light p-6 rounded-xl border-l-4 border-brand-primary">
                 <p class="text-gray-800 font-medium italic">
-                    «Данное устройство обеспечивает защиту электрического кабеля от механических повреждений в местах его вывода на вертикальные плоскости различных конструкций по всей протяженности защищаемого участка и возможность монтажа кабеля любой жесткости.»
+                    «Данное устройство обеспечивает защиту электрического кабеля от механических повреждений в местах его вывода на вертикальные плоскости различных конструкций и оснований по всей протяженности защищаемого участка и возможность монтажа кабеля любой жесткости.»
                 </p>
             </div>
         </div>
@@ -280,56 +280,184 @@
 
             <div class="bg-white shadow-xl rounded-2xl overflow-hidden border border-gray-200">
                 <div class="overflow-x-auto">
-                    <table class="w-full text-left border-collapse">
-                        <thead class="bg-gray-50 text-gray-700 uppercase text-sm font-bold border-b border-gray-200">
-                            <tr>
-                                <th class="px-6 py-4">Модель</th>
-                                <th class="px-6 py-4">Тип</th>
-                                <th class="px-6 py-4 min-w-[300px]">Характеристики</th>
-                                <th class="px-6 py-4 text-right">Цена</th>
-                            </tr>
-                        </thead>
-                        <tbody class="divide-y divide-gray-100 text-sm md:text-base">
-                            <!-- Rows (Preserved) -->
-                            <tr class="hover:bg-amber-50/50 transition duration-150">
-                                <td class="px-6 py-4 font-bold text-gray-900">D57/R800</td>
-                                <td class="px-6 py-4 text-gray-600">D 57/3,5</td>
-                                <td class="px-6 py-4 text-gray-600">L-2300. R-800 АСБл 3х50 или аналог</td>
-                                <td class="px-6 py-4 text-right whitespace-nowrap"><span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">16 500 ₽</span></td>
-                            </tr>
-                            <tr class="hover:bg-amber-50/50 transition duration-150 bg-gray-50/30">
-                                <td class="px-6 py-4 font-bold text-gray-900">D57/R850</td>
-                                <td class="px-6 py-4 text-gray-600">D 57/3,5</td>
-                                <td class="px-6 py-4 text-gray-600">L-2300. R-850 АСБл 3х70;3х95;3х120</td>
-                                <td class="px-6 py-4 text-right whitespace-nowrap"><span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">19 000 ₽</span></td>
-                            </tr>
-                            <tr class="hover:bg-amber-50/50 transition duration-150">
-                                <td class="px-6 py-4 font-bold text-gray-900">D57/R1400</td>
-                                <td class="px-6 py-4 text-gray-600">D 57/3,5</td>
-                                <td class="px-6 py-4 text-gray-600">L-2300. R-1400 Заказная позиция</td>
-                                <td class="px-6 py-4 text-right font-bold text-gray-400 italic whitespace-nowrap">договорная</td>
-                            </tr>
-                            <tr class="hover:bg-amber-50/50 transition duration-150 bg-gray-50/30">
-                                <td class="px-6 py-4 font-bold text-gray-900">D76/R1000</td>
-                                <td class="px-6 py-4 text-gray-600">D 76/3,5</td>
-                                <td class="px-6 py-4 text-gray-600">L-2300. R-1000 АСБл 3х240</td>
-                                <td class="px-6 py-4 text-right whitespace-nowrap"><span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">25 000 ₽</span></td>
-                            </tr>
-                            <tr class="hover:bg-amber-50/50 transition duration-150">
-                                <td class="px-6 py-4 font-bold text-gray-900">D76/R900</td>
-                                <td class="px-6 py-4 text-gray-600">D 76/3,5</td>
-                                <td class="px-6 py-4 text-gray-600">L-2300. R-900 АСБл 3х185</td>
-                                <td class="px-6 py-4 text-right whitespace-nowrap"><span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">24 100 ₽</span></td>
-                            </tr>
-                            <tr class="hover:bg-amber-50/50 transition duration-150 bg-gray-50/30">
-                                <td class="px-6 py-4 font-bold text-gray-900">D89/R800</td>
-                                <td class="px-6 py-4 text-gray-600">D 89/3,5</td>
-                                <td class="px-6 py-4 text-gray-600">L-2300. R-800 АПвП 3х150/35</td>
-                                <td class="px-6 py-4 text-right whitespace-nowrap"><span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">25 000 ₽</span></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+    <table class="w-full text-left border-collapse min-w-[800px]">
+        <thead class="bg-gray-50 text-gray-700 uppercase text-sm font-bold border-b border-gray-200">
+            <tr>
+                <th class="px-6 py-4 w-1/6">Модель</th>
+                <th class="px-6 py-4 w-1/3">Характеристики</th>
+                <th class="px-6 py-4 w-1/3">Марка кабеля</th>
+                <th class="px-6 py-4 w-1/6 text-right">Цена</th>
+            </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-100 text-sm md:text-base">
+            <!-- Row 1 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150">
+                <td class="px-6 py-4 font-bold text-gray-900">D57/R800</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 57/3,5<br>L-2300. R-800
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АСБл 3х50 или<br>аналог по характеристикам
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">16 500 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 2 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150 bg-gray-50/30">
+                <td class="px-6 py-4 font-bold text-gray-900">D57/R850</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 57/3,5<br>L-2300. R-850
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АСБл 3x70; 3x95; 3x120
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">19 000 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 3 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150">
+                <td class="px-6 py-4 font-bold text-gray-900">D57/R1400</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 57/3,5<br>L-2300. R-1400
+                </td>
+                <td class="px-6 py-4 text-gray-600 italic">
+                    Заказная позиция
+                </td>
+                <td class="px-6 py-4 text-right font-bold text-gray-400 italic whitespace-nowrap">договорная</td>
+            </tr>
+            <!-- Row 4 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150 bg-gray-50/30">
+                <td class="px-6 py-4 font-bold text-gray-900">D76/R1000</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 76/3,5<br>L-2300. R-1000
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АСБл 3х240
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">25 000 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 5 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150">
+                <td class="px-6 py-4 font-bold text-gray-900">D76/R900</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 76/3,5<br>L-2300. R-900
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АСБл 3х185
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">24 100 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 6 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150 bg-gray-50/30">
+                <td class="px-6 py-4 font-bold text-gray-900">D76/R1400</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 76/3,5<br>L-2300. R-1400
+                </td>
+                <td class="px-6 py-4 text-gray-600 italic">
+                    Заказная позиция
+                </td>
+                <td class="px-6 py-4 text-right font-bold text-gray-400 italic whitespace-nowrap">договорная</td>
+            </tr>
+            <!-- Row 7 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150">
+                <td class="px-6 py-4 font-bold text-gray-900">D89/R800</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 89/3,5<br>L-2300. R-800
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АПвП 3х150/35
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">25 000 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 8 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150 bg-gray-50/30">
+                <td class="px-6 py-4 font-bold text-gray-900">D89/R850</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 89/3,5<br>L-2300. R-850
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АПвП 3х185/70
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">25 000 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 9 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150">
+                <td class="px-6 py-4 font-bold text-gray-900">D89/R1000</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 89/3,5<br>L-2300. R-1000
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АПвП 3х240/35
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">25 000 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 10 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150 bg-gray-50/30">
+                <td class="px-6 py-4 font-bold text-gray-900">D32/R400</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 32/3,5<br>L-2300. R-400
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АВБбШв 4x16
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">10 000 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 11 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150">
+                <td class="px-6 py-4 font-bold text-gray-900">D40/R400</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 40/3,5<br>L-2300. R-400
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АВБбШв 4x25; 4x35
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">10 000 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 12 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150 bg-gray-50/30">
+                <td class="px-6 py-4 font-bold text-gray-900">D50/R400</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 50/3,5<br>L-2300. R-400
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АВБбШв 5x25; 5x35
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">11 100 ₽</span>
+                </td>
+            </tr>
+            <!-- Row 13 -->
+            <tr class="hover:bg-amber-50/50 transition duration-150">
+                <td class="px-6 py-4 font-bold text-gray-900">D57/R400</td>
+                <td class="px-6 py-4 text-gray-600 font-mono text-xs md:text-sm">
+                    D 57/3,5<br>L-2300. R-400
+                </td>
+                <td class="px-6 py-4 text-gray-600">
+                    АВБбШв 5x50
+                </td>
+                <td class="px-6 py-4 text-right whitespace-nowrap">
+                    <span class="inline-block bg-brand-primary text-brand-dark px-3 py-1 rounded-full font-bold text-sm shadow-sm">16 000 ₽</span>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
             </div>
         </div>
     </section>
